Fix alignement in dashboard tables

--- a/src/classes.css
+++ b/src/classes.css
@@ -80,3 +80,16 @@
     color: white;
     background-color: rgba(0, 191, 255, 0.5);
 }
+
+.dash_tables
+{
+    padding: 10px;
+    margin: 3px;
+}
+
+.dash_tables th
+{
+
+    width: 60%;
+}
+
